tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@syntax__invalid_expression.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/syntax/invalid_expression.txt
---
Failed to parse 'test.html'

 Syntax error --> [test.html:1:7]
  |
1 | {{ 1 + }}
  |        ^---
  = Found `}}` but expected one of: integer, float, string, bool, ident, `-`, `not`, `<`, `{`, `[` or `(`
